# research-dd

./: .gitignore  README.md  pyproject.toml  smoke_install.sh
docs/: README_FRAMEWORK.md  customization.md  implement_worker.md  playwright-cli.md  profiles.md  troubleshooting.md
e2e/: test_smoke.py
integration/: test_doctor.py  test_mcp_config.py  test_renderer.py
research_driven_setup/: __init__.py  __main__.py  cli.py
research_driven_setup/commands/: doctor.py  install.py  list_profiles.py  report.py  uninstall.py  update.py
research_driven_setup/core/: app_context.py  bootstrap.py  conflict_policy.py  doctor.py  manifest.py  mcp.py  profiles.py  renderer.py  report.py  secrets.py  updater.py  workspace_state.py
research_driven_setup/resources/ascii/: banner.txt
research_driven_setup/resources/manifest/: framework.manifest.json
research_driven_setup/resources/manifest/profiles/: ubuntu-research-playwright.json  ubuntu-research.json
research_driven_setup/resources/templates/base/.github/agents/: context7.agent.md  deep-research.agent.md  implement-worker.agent.md  plan-architect.agent.md  playwright-debug.agent.md  test-scenario-architect.agent.md
research_driven_setup/resources/templates/base/.github/instructions/: playwright-cli.instructions.md  python.instructions.md
research_driven_setup/resources/templates/base/.github/prompts/: agent-implementation.prompt.md  deep-research-workspace-setup.prompt.md  implement-worker.prompt.md  (+5 more)
unit/: test_bootstrap.py  test_cli.py  test_conflict_policy.py  test_manifest.py  test_mcp.py  test_profiles.py
(+75 files in other folders)
