[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-driven-setup"
version = "0.1.0"
description = "Framework installer for research-driven development in VS Code with GitHub Copilot Chat."
readme = "docs/README_FRAMEWORK.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<16.0",
]

[project.scripts]
research-driven-setup = "research_driven_setup.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
research_driven_setup = [
    "resources/**/*",
    "resources/**/.github/**/*",
    "resources/**/.*",
]
